Updated entire project with new website version

--- a/about.html
+++ b/about.html
@@ -1,25 +1,72 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | CampusMart</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>CampusMart — About</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <header>
-    <h1 class="logo">CampusMart</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="login.html">Login</a>
-      <a href="about.html">About Us</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+  <header class="site-header">
+    <div class="container header-inner">
+      <div class="brand">CampusMart</div>
+      <nav class="main-nav">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="products.html" class="nav-link">Products</a>
+        <a href="about.html" class="nav-link active">About</a>
+        <a href="contact.html" class="nav-link">Contact</a>
+        <a href="login.html" class="nav-link">Login</a>
+      </nav>
+    </div>
   </header>
 
-  <main class="about">
-    <h2>About CampusMart</h2>
-    <p>CampusMart is a student-built e-commerce platform that makes shopping for college essentials easy and affordable. We offer everything from stationery and gadgets to hostel supplies.</p>
+  <main class="container about-page">
+    <h1>About CampusMart</h1>
+
+    <div class="about-content">
+      <p>CampusMart started as a simple idea among students: collect the items students actually need and make them easy to find, afford and receive. Instead of searching many stores and compromising on price or quality, CampusMart brings curated campus essentials together — with clear descriptions, honest reviews, and student-friendly prices.</p>
+
+      <p>We are a small team of students and recent graduates who grew tired of low-quality listings and unclear delivery for campus shipments. We built CampusMart to solve three problems: discoverability (finding the right product), trust (real reviews and quality checks), and convenience (fast campus deliveries and easy returns).</p>
+
+      <p>Our product selection focuses on what matters to students: reliable laptops and peripherals for project work; stationery and organizers to stay efficient; and hostel utilities designed for small spaces. Each product is reviewed by our team and labelled clearly for intended use.</p>
+
+      <p>Beyond products, CampusMart aims to build community. We encourage local sellers and student entrepreneurs to list campus-friendly items, creating a micro-economy that supports talent within colleges. With every purchase, students support fellow students and small creators.</p>
+
+      <p>We continue improving CampusMart by listening to feedback, iterating on features, and expanding our catalog. Our mission is simple: help every student focus on learning while we handle the essentials.</p>
+    </div>
+
+    <h2>Customer reviews</h2>
+    <div class="review-grid">
+      <div class="review-card">
+        <img src="https://i.imgur.com/4AiXzf8.jpeg" alt="customer">
+        <div>
+          <strong>Priya Sharma</strong>
+          <p>“Quick delivery to my hostel and good quality — my study setup is now complete.”</p>
+        </div>
+      </div>
+
+      <div class="review-card">
+        <img src="https://i.imgur.com/ebHfuth.jpeg" alt="customer">
+        <div>
+          <strong>Rahul Mehta</strong>
+          <p>“The laptop I bought has been excellent for coding and competitions.”</p>
+        </div>
+      </div>
+
+      <div class="review-card">
+        <img src="https://i.imgur.com/q6BvG7E.jpeg" alt="customer">
+        <div>
+          <strong>Swetha R.</strong>
+          <p>“Everything I ordered for my room arrived neatly packed and on time.”</p>
+        </div>
+      </div>
+    </div>
   </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <p>© 2025 CampusMart — Empowering Students.</p>
+    </div>
+  </footer>
 </body>
 </html>
