--- a/login.html
+++ b/login.html
@@ -1,44 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CampusMart | Login</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>CampusMart — Login</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <header>
-    <h1 class="logo">CampusMart</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="login.html">Login</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+  <header class="site-header">
+    <div class="container header-inner">
+      <div class="brand">CampusMart</div>
+      <nav class="main-nav">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="products.html" class="nav-link">Products</a>
+        <a href="about.html" class="nav-link">About</a>
+        <a href="contact.html" class="nav-link">Contact</a>
+        <a href="login.html" class="nav-link active">Login</a>
+      </nav>
+    </div>
   </header>
 
-  <div class="form-container">
-    <div class="form-card">
-      <h2>Register</h2>
-      <form id="registerForm">
-        <input type="text" id="rname" placeholder="Full Name" required>
-        <input type="email" id="remail" placeholder="Email" required>
-        <input type="password" id="rpass" placeholder="Password (min 6 chars)" minlength="6" required>
-        <button type="submit">Register</button>
-        <p id="regMsg"></p>
-      </form>
-    </div>
+  <main class="container login-page">
+    <div class="auth-grid">
+      <div class="auth-card">
+        <h2>Create account</h2>
+        <form id="registerForm">
+          <input id="regName" type="text" placeholder="Full name" required />
+          <input id="regEmail" type="email" placeholder="Email" required />
+          <input id="regPass" type="password" placeholder="Password (6+ chars)" required />
+          <button class="btn btn-primary" type="submit">Register</button>
+          <p id="regFeedback" class="small muted"></p>
+        </form>
+      </div>
 
-    <div class="form-card">
-      <h2>Login</h2>
-      <form id="loginForm">
-        <input type="email" id="lemail" placeholder="Email" required>
-        <input type="password" id="lpass" placeholder="Password" required>
-        <button type="submit">Login</button>
-        <p id="logMsg"></p>
-      </form>
+      <div class="auth-card">
+        <h2>Login</h2>
+        <form id="loginForm">
+          <input id="loginEmail" type="email" placeholder="Email" required />
+          <input id="loginPass" type="password" placeholder="Password" required />
+          <button class="btn btn-primary" type="submit">Login</button>
+          <p id="loginFeedback" class="small muted"></p>
+        </form>
+      </div>
     </div>
-  </div>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <p>© 2025 CampusMart</p>
+    </div>
+  </footer>
 
   <script src="js/script.js"></script>
 </body>
